SF Primes/src/objects/ALL_Field_Value_Assignment_Settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Identifier__c</fullName>
        <label>Identifier</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lending_Field_Name__c</fullName>
        <label>Lending Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lending_sObject__c</fullName>
        <label>Lending sObject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Query_Conditions_Identifier__c</fullName>
        <label>Query Conditions Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Query_Field_s__c</fullName>
        <label>Query Field(s)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Query_sObject__c</fullName>
        <label>Query sObject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Receiving_Field_Name__c</fullName>
        <label>Receiving Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Receiving_sObject__c</fullName>
        <label>Receiving sObject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>String_Field_Value__c</fullName>
        <label>String Field Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>ALL Field Value Assignment Settings</label>
</CustomObject>